--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
     "@google/genai": "^1.34.0",
-    "lucide-react": "^0.562.0",
+    "@supabase/supabase-js": "^2.89.0",
+    "framer-motion": "^11.0.8",
     "leaflet": "^1.9.4",
-    "framer-motion": "^11.0.8"
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
